# promptclip

./: .eslintrc.json  README.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.css  App.tsx  cache.ts  main.tsx  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  ns_panel.rs  util.rs
src-tauri/src/util/: preferences.rs
src/components/Actions/: Actions.component.tsx
src/components/AddPrompt/: AddPrompt.component.tsx
src/components/CategoriesButton/: CategoriesButton.components.tsx
src/components/CustomButton/: CustomButton.component.tsx
src/components/CustomIconButton/: CustomIconButton.component.tsx
src/components/CustomInput/: CustomInput.component.tsx
src/components/Dashboard/: Dashboard.component.tsx  HeartIcon.tsx
src/components/DetailedPrompt/: DetailedPrompt.component.tsx
src/components/Icons/: EditIcon.tsx  HeartIcon.tsx  PromptClipLogo.tsx  SettingsIcon.tsx  StarsIcon.tsx  TrashIcon.tsx  UsedForIcon.tsx
src/components/Input/: CustomInput.component.tsx  Input.component.tsx
src/components/Prompt/: Icon.tsx  Prompt.component.tsx
src/components/PromptButton/: PromptButton.component.tsx
src/components/Prompts/: Prompts.component.tsx
src/components/Search/: Search.component.tsx
src/components/SearchInput/: SearchInput.component.tsx
src/components/SideBarButtons/: SideBarButton.component.tsx
src/contexts/: categories.context.tsx  prompts.context.tsx
src/types/: Prompt.types.tsx
src/utils/: colors.ts  database.ts  utils.ts  window.ts
(+23 files in other folders)
